Moves '.accolades' to '#About' '.container' above it. Modifies 'style.css' for correct responsive floating, align, and font size for '.accolades'.

--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -560,16 +560,47 @@ header .menu-icon i:hover{
     width: 25%;
 }
 
-#about .autism-speaks {
+.accolades {
     clear: both;
-    text-align: center;
-    margin-left: auto;
+    width: 100%;
+    height: auto;
+    float: none;
     margin-right: auto;
+    margin-left: auto;
+    padding: 20px 0 0 0;
+    font-size: 1em;
+    color: #03a8ce;
+    text-align: center;
+}
+
+.accolades .col-md-9 {
+    float: none;
+    margin: 10px 0 0 0;
+}
+
+#about .autism-speaks {
+    text-align: center;
+    float: none;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-top: 20px;
 }
 
 #about .gold-star {
+    float: none;
+    margin-right: auto;
+    margin-left: auto;
     background-image: url(../img/TemplateImg/gold-star-01.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 100px;
+    height: 100px;
+}
+
+.gold-star img {
+    float: right;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -1452,6 +1483,10 @@ border-top: 22px solid #3fbfE1;
     #about .row .container {
         margin: 60px 0;
     }
+
+    .accolades .col-md-9 {
+        font-size: 2em;
+    }
     
     
 /* CONTACT ELEMENTS ************************************************************/
@@ -1830,6 +1865,22 @@ border-top: 22px solid #3fbfE1;
 
     #about .row .container {
         margin: 60px 0;
+    }
+
+    #about .gold-star {
+        float: left;
+        margin: none;
+        padding: none;
+    }
+
+    .accolades .col-md-9 {
+        float: right;
+        margin-left: none;
+        margin-right: none;
+    }
+
+    .autism-speaks {
+        float: right;
     }
     
     
